<resources>
    <string name="app_name">BeUpTo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="vendor_follow">Follow Now</string>


    <string name="send_to">Send to</string>

    <string name="googleplus_default_web_client_id">702765757599-or78tpqstugnd06d8sd2ac3d1v8n978g.apps.googleusercontent.com</string>
    <string name="twitter_consumer_key">lTJEnQMolaY5P2rnrkGA1Ppv3</string>
    <string name="twitter_consumer_secret">Gkvav8Bet5pmjAl77e2yMBiykI0cSfLf3QLPfvkYkfheVa8kyk</string>

    <string name="introduction_explaination_subinformation">That\'s why <b>BeUpTo</b> shows you <i>News you want</i>! You decide what you <u>subscribe</u>.\n You are able to subscribe \n<b>News-Pages</b> - <b>Podcasts</b> - <b>Youtube Channels</b></string>

    <string name="introduction_get_started">Start now</string>
    <string name="introduction_socialmedia_title">Sync Accounts</string>
    <string name="introduction_sign_up_title">Create Account</string>
    <string name="introduction_interests_title">What interests you?</string>
    <string name="introduction_skip_account_syncing"><u>skip syncing accounts</u></string>
    <string name="introduction_sign_up_subinformation">Your Username will be visible to other Users. To keep your data save we don\'t demand direct personal information.</string>
    <string name="introduction_socialmedia_subinformation">For every account you give us access we show related information for example Tweets</string>
    <string name="introduction_interests_subinformation">You can subscribe our corporate channels that contain well known public sources or you can subscribe individual channels later</string>
    <string name="introduction_sign_up_username_placeholder">Your Username</string>
    <string name="introduction_sign_up_password_placeholder">Your Password</string>
    <string name="introduction_finish_title">Discover It Now</string>
    <string name="introduction_sign_up_start_text"><u>Sign Up Now</u></string>
    <string name="introduction_sign_up_back_to">Go back to</string>
    <string name="introduction_sign_up_back_to_sign_in"><u>Sign In</u></string>
    <string name="intent_start_finish">intent_start_finish</string>
    <string name="intent_infos">intent_infos</string>
    <string name="intent_info_source">intent_info_source</string>


</resources>
